Fix vertical alignment of glyphicons to be less low

--- a/css/menu.css
+++ b/css/menu.css
@@ -318,3 +318,7 @@
 .menu .mini-icon {
     padding-right: 5px;
 }
+
+.menu button .glyphicon {
+    top: 0;
+}
